[FIX] isBlank() 메서드 반영